# quickstart-desktop-cpp

./: CMakeLists.txt  README.md  main.cpp
bnb_sdk_manager/src/: BanubaSdkManager.cpp  BanubaSdkManager.hpp
example/: BanubaClientToken.hpp  main.cpp
example/renderer/: render_thread.cpp  render_thread.hpp
interfaces/: offscreen_effect_player.hpp  offscreen_render_target.hpp  pixel_buffer.hpp
libraries/: CmakeLists.txt
libraries/show_renderer/: CMakeLists.txt
libraries/show_renderer/include/: render_thread.hpp
libraries/show_renderer/src/: glfw_window.cpp  render_thread.cpp  renderer.cpp  renderer_gl_context.cpp
offscreen_effect_player/: CMakeLists.txt
offscreen_effect_player/include/: offscreen_effect_player.hpp  pixel_buffer.hpp
offscreen_effect_player/interfaces/: offscreen_effect_player.hpp  pixel_buffer.hpp
offscreen_effect_player/src/: offscreen_effect_player.cpp  pixel_buffer.cpp
offscreen_render_target/: CMakeLists.txt
offscreen_render_target/include/: offscreen_render_target.hpp
offscreen_render_target/interfaces/: offscreen_render_target.hpp
offscreen_render_target/src/: offscreen_render_target.cpp
